fix sidBookSection scroll on mobile

--- a/styles/listenedBookBox.css
+++ b/styles/listenedBookBox.css
@@ -268,6 +268,3 @@
     padding-right: 40px;
   }
 }
-
-@media (max-height: 600px) {
-}
