--- a/styles/mostPopularSection.css
+++ b/styles/mostPopularSection.css
@@ -85,8 +85,3 @@
     width: 100%;
   }
 }
-/* @media (max-width: 340px) {
-  .most-popular-book-name {
-    width: 150px;
-  }
-} */
